src/config/snapshots/worktrunk__config__deprecation__tests__snapshot_migrate_combined_top_and_project.snap
---
source: src/config/deprecation.rs
expression: "migration_diff(content, &result)"
---
 
-[commit-generation]
+[commit.generation]
 command = "llm -m haiku"
 
-[projects."github.com/user/repo".commit-generation]
+[projects."github.com/user/repo".commit.generation]
 command = "llm -m gpt-4"
 
 [list]
 branches = true
