src/config/snapshots/worktrunk__config__deprecation__tests__snapshot_migrate_commit_generation_simple.snap
---
source: src/config/deprecation.rs
expression: "migration_diff(content, &result)"
---
 
-[commit-generation]
+[commit.generation]
 command = "llm -m haiku"
