src/config/snapshots/worktrunk__config__deprecation__tests__snapshot_migrate_commit_generation_with_args.snap
---
source: src/config/deprecation.rs
expression: "migration_diff(content, &result)"
---
 
-[commit-generation]
-command = "llm"
-args = ["-m", "claude-haiku-4.5"]
+[commit.generation]
+command = "llm -m claude-haiku-4.5"
