src/config/snapshots/worktrunk__config__deprecation__tests__snapshot_migrate_create_to_start.snap
---
source: src/config/deprecation.rs
expression: "migration_diff(content, &migrated)"
---
-pre-create = "npm install"
+pre-start = "npm install"
 
-[post-create]
+[post-start]
 server = "npm run dev"
 
 [list]
 json-schema = 1
