src/config/snapshots/worktrunk__config__deprecation__tests__snapshot_migrate_post_create_to_pre_start.snap
---
source: src/config/deprecation.rs
expression: "migration_diff(content, &result)"
---
-post-create = "npm install"
+pre-start = "npm install"
 
 [post-start]
 server = "npm run dev"
