src/config/snapshots/worktrunk__config__deprecation__tests__snapshot_migrate_pre_hook_table_form.snap
---
source: src/config/deprecation.rs
expression: "migration_diff(content, &result)"
---
-[pre-merge]
-test = "cargo test"
-lint = "cargo clippy"
+pre-merge = [{ test = "cargo test" }, { lint = "cargo clippy" }]
 
 [post-start]
 server = "npm run dev"
