src/config/snapshots/worktrunk__config__deprecation__tests__snapshot_migrate_preserves_existing_commit_section.snap
---
source: src/config/deprecation.rs
expression: "migration_diff(content, &result)"
---
 
 [commit]
 stage = "all"
 
-[commit-generation]
+[commit.generation]
 command = "llm -m haiku"
