src/config/snapshots/worktrunk__config__deprecation__tests__snapshot_migrate_select_to_switch_picker.snap
---
source: src/config/deprecation.rs
expression: "migration_diff(content, &result)"
---
 worktree-path = "../{{ repo }}.{{ branch | sanitize }}"
 
-[select]
+[switch.picker]
 pager = "delta --paging=never"
 
 [list]
 branches = true
