src/config/snapshots/worktrunk__config__deprecation__tests__snapshot_migrate_start_to_create.snap
---
source: src/config/deprecation.rs
expression: "migration_diff(content, &migrated)"
---
-pre-start = "npm install"
+pre-create = "npm install"
 
-[post-start]
+[post-create]
 server = "npm run dev"
