src/config/snapshots/worktrunk__config__deprecation__tests__snapshot_migrate_with_trailing_sections.snap
---
source: src/config/deprecation.rs
expression: "migration_diff(content, &result)"
---
 # Config file
 worktree-path = "../{{ repo }}.{{ branch | sanitize }}"
 
-[commit-generation]
-command = "llm"
-args = ["-m", "claude-haiku-4.5"]
+[commit.generation]
+command = "llm -m claude-haiku-4.5"
 
 [list]
 branches = true
 remotes = false
